--- a/app/index.html
+++ b/app/index.html
@@ -9,40 +9,25 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="styles/ssc.css">
-  <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.css">
-
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-    <li>Angular seed app: v<span app-version></li>
+    <li><a ui-sref="view1">view1</a></li>
+    <li><a ui-sref="view2">view2</a></li>
   </ul>
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
-  <div ng-view></div>
-
-
+  <div ui-view></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="lib/jquery/jquery.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="/node_modules/jquery/dist/jquery.js"></script>
+  <script src="/node_modules/angular/angular.js"></script>
+  <script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>
   
-  <!--<script src="bootstrap-3.36-dist/js/bootstrap.js"></script>-->
-  <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="lib/ui-bootstrap-tpls-1.3.2.js"></script>
-  <!--<script src="lib/angular-toastr/angular-toastr.tpls.js"></script>-->
-  
+  <script src="/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
@@ -54,19 +39,10 @@
   <script src="services/validationService.js"></script>
   <script src="services/appResources.js"></script>
   <script src="services/localeService.js"></script>
-  <!--<script src="services/eventService.js"></script>-->
-  <!--<script src="services/sscEventService.js"></script>-->
-  <!--<script src="services/dialogService.js"></script>-->
-  <!--<script src="services/logService.js"></script>-->
-  <!--<script src="services/messageQueueService.js"></script>-->
-
-  <!--<script src="controllers/inlineMessageController.js"></script>-->
   <script src="controllers/datepickerController.js"></script>
 
   <script src="directives/drvPfmDateValidator.js"></script>
   <script src="directives/drvPfmDatepicker.js"></script>
-  <!--<script src="directives/drvSscInlineMessageBox.js"></script>-->
-  <!--<script src="directives/drvPfmCompileToElementSafeHtml.js"></script>-->
 
 </body>
 </html>
