add select and nav buttons

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/ssc.css">
+  <link rel="stylesheet" href="/node_modules/ui-select/dist/select.css">
 </head>
 <body>
   <ul class="menu">
@@ -26,6 +27,7 @@
   <script src="/node_modules/angular/angular.js"></script>
   <script src="/node_modules/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/node_modules/angular-sanitize/angular-sanitize.js"></script>
+  <script src="/node_modules/ui-select/dist/select.min.js"></script>
   
   <script src="/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   
